<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:settingsActivity="org.iosclone.keyboard.settings.SettingsActivity"
    android:supportsSwitchingToNextInputMethod="true"
    android:isDefault="false">
    <subtype
        android:label="@string/subtype_en_us"
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:label="@string/subtype_es_es"
        android:imeSubtypeLocale="es_ES"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:label="@string/subtype_fr_fr"
        android:imeSubtypeLocale="fr_FR"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:label="@string/subtype_de_de"
        android:imeSubtypeLocale="de_DE"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:label="@string/subtype_ru_ru"
        android:imeSubtypeLocale="ru_RU"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:label="@string/subtype_ar"
        android:imeSubtypeLocale="ar"
        android:imeSubtypeMode="keyboard" />
</input-method>
